# stream-downloader

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  config.toml.example
.github/workflows/: ci.yml
src/: main.rs
