[package]
name = "stream_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.90"
cbc = "0.1.2"
m3u8-rs = "6.0.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde_json = "1.0.132"
tempfile = "3.13.0"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.2"
