[package]
name = "stream_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.95"
cbc = "0.1.2"
m3u8-rs = "6.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
url = "2.5.4"
